🐛 fix: #5 resolve 'Welcome' page layout issue

--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -13,11 +13,13 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  min-height: 100vh;
+  max-width: 100%;
+  height: 100%;
   width: 100vw;
   text-align: center;
   background-color: white;
   box-sizing: border-box;
+  margin-top: -130px;
 }
 
 .top-logo {
@@ -51,6 +53,7 @@ body {
   margin-top: 0px;
   font-family: 'Itim', cursive;
   font-size: 35px;
+  margin-bottom: 20px;
 }
 
 .welcome-text {
@@ -58,7 +61,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  margin-top: 0px;
+  margin-top: 10px;
   margin-bottom: 0px;
 }
 
